--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -2106,6 +2106,10 @@ html {
 .m-px {
   margin: 1px;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -2114,9 +2118,8 @@ html {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.mt-8 {
+  margin-top: 2rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -2132,12 +2135,6 @@ html {
 }
 .mt-10 {
   margin-top: 2.5rem;
-}
-.mt-8 {
-  margin-top: 2rem;
-}
-.block {
-  display: block;
 }
 .inline-block {
   display: inline-block;
@@ -2205,11 +2202,14 @@ html {
 .w-1\/6 {
   width: 16.666667%;
 }
-.max-w-screen-2xl {
-  max-width: 1536px;
+.max-w-4xl {
+  max-width: 56rem;
 }
 .max-w-md {
   max-width: 28rem;
+}
+.max-w-screen-2xl {
+  max-width: 1536px;
 }
 .max-w-lg {
   max-width: 32rem;
@@ -2225,9 +2225,6 @@ html {
 }
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: var(--tw-transform);
-}
-.transform {
   transform: var(--tw-transform);
 }
 @-webkit-keyframes pulse {
@@ -2252,11 +2249,11 @@ html {
 .grid-flow-row {
   grid-auto-flow: row;
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -2300,6 +2297,9 @@ html {
 .justify-items-center {
   justify-items: center;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-4 {
   gap: 1rem;
 }
@@ -2327,6 +2327,9 @@ html {
 }
 .justify-self-end {
   justify-self: end;
+}
+.justify-self-center {
+  justify-self: center;
 }
 .justify-self-stretch {
   justify-self: stretch;
@@ -2392,6 +2395,10 @@ html {
 }
 .p-8 {
   padding: 2rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .py-2 {
   padding-top: 0.5rem;
