--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -425,6 +425,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .grid {
   display: grid;
 }
+.hidden {
+  display: none;
+}
 .h-4 {
   height: 1rem;
 }
