--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,6 +2,10 @@
 	/* --cds-label-01-font-size: 1.5rem !important; */
 	--cds-label-01-font-size: 120% !important;
 }
+/* .bx--list-box--expanded.bx--list-box--xl .bx--list-box__menu,
+.bx--list-box--expanded.bx--list-box--lg .bx--list-box__menu {
+	max-height: 100vh !important;
+} */
 
 @tailwind base;
 @tailwind components;
